Fix copyright line not displaying OK on mobile
No clue why there was a 0em there ...

--- a/src/stylesheets/site/_footer.scss
+++ b/src/stylesheets/site/_footer.scss
@@ -26,7 +26,7 @@
 
 #copyright {
   font-style: italic;
-  line-height: 0em;
+  line-height: 1.5em;
 
   a {
     text-decoration: underline;
